--- a/public/projects/cesta_dolu/index.html
+++ b/public/projects/cesta_dolu/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cesta dolů</title>
-    <link rel="stylesheet" href="projects/../css/style.css" />
+    <link rel="stylesheet" href="projects/cesta_dolu/css/style.css" />
     <link rel="stylesheet" href="../../css/home.css" />
     <link
       href="../../favicon/favicon.ico"
