--- a/public/projects/cesta_dolu/index.html
+++ b/public/projects/cesta_dolu/index.html
@@ -37,6 +37,6 @@
       <div id="character">4</div>
     </div>
   </body>
-  <script src="js/controls.js"></script>
-  <script src="js/cdscript.js"></script>
+  <script src="/projects/cesta_dolu/js/controls.js"></script>
+  <script src="/projects/cesta_dolu/js/cdscript.js"></script>
 </html>
