--- a/public/projects/hardware/index.html
+++ b/public/projects/hardware/index.html
@@ -9,7 +9,7 @@
     <meta name="robots" content="all" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- <meta http-equiv='X-UA-Compatible' content='IE=edge'> -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/projects/hardware/css/style.css" />
     <link rel="stylesheet" href="../../css/home.css" />
     <link
       href="../../favicon/favicon.ico"
@@ -59,8 +59,8 @@
         <li>reproduktory</li>
         <li>základní desku</li>
       </ul>
-      <a href="img/hardware.jpg"
-        ><img src="img/hardware.jpg" alt="hardware.jpg"
+      <a href="/projects/hardware/img/hardware.jpg"
+        ><img src="/projects/hardware/img/hardware.jpg" alt="hardware.jpg"
       /></a>
     </main>
     <footer>
