--- a/public/projects/hardware/klavesnice.html
+++ b/public/projects/hardware/klavesnice.html
@@ -9,7 +9,7 @@
     <meta name="robots" content="all" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- <meta http-equiv='X-UA-Compatible' content='IE=edge'> -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/projects/hardware/css/style.css" />
     <link rel="stylesheet" href="../../css/home.css" />
     <link
       href="../../favicon/favicon.ico"
@@ -68,8 +68,8 @@
         <li>Velikost palce</li>
         <li>Multifunkční</li>
       </ul>
-      <a href="img/klavesnice.jpg"
-        ><img src="img/klavesnice.jpg" alt="klavesnice.jpg"
+      <a href="/projects/hardware/img/klavesnice.jpg"
+        ><img src="/projects/hardware/img/klavesnice.jpg" alt="klavesnice.jpg"
       /></a>
     </main>
     <footer><p>Autor: Dominik Kostka</p></footer>
