--- a/public/projects/obrazova_mapa/hroch.html
+++ b/public/projects/obrazova_mapa/hroch.html
@@ -22,8 +22,8 @@
   <body>
     <a href="/"><i class="fas fa-home"></i></a>
     <h1 align="center">Hroch</h1>
-    <a href="img/hroch_ok.jpg"
-      ><img src="img/hroch_m.jpg" alt="hroch_m.jpg"
+    <a href="/projects/obrazova_mapa/img/hroch_ok.jpg"
+      ><img src="/projects/obrazova_mapa/img/hroch_m.jpg" alt="hroch_m.jpg"
     /></a>
     <p align="justify">
       Hroch má zavalité tělo s velkou hlavou s široce rozevíratelnou tlamou. Má
