--- a/public/projects/obrazova_mapa/tygr.html
+++ b/public/projects/obrazova_mapa/tygr.html
@@ -22,7 +22,9 @@
   <body>
     <a href="/"><i class="fas fa-home"></i></a>
     <h1 align="center">Tygr</h1>
-    <a href="img/tygr_ok.jpg"><img src="img/tygr_m.jpg" alt="tygr_m.jpg" /></a>
+    <a href="/projects/obrazova_mapa/img/tygr_ok.jpg"
+      ><img src="/projects/obrazova_mapa/img/tygr_m.jpg" alt="tygr_m.jpg"
+    /></a>
     <p align="justify">
       Tygr ussurijský žil původně na rozsáhlém území mezi Bajkalem a pobřežím
       Tichého oceánu, v současnosti žije takřka výhradně na omezeném území
