--- a/public/projects/obrazova_mapa_2/hory.html
+++ b/public/projects/obrazova_mapa_2/hory.html
@@ -40,11 +40,19 @@
       115 m n. m. Hranická propast je nejhlubší zatopenou jeskyní na světě.
       Nejrozsáhlejším krasovým územím je Moravský kras.
     </p>
-    <a href="img/hory.jpg"
-      ><img src="img/hory.jpg" alt="hory.jpg" title="hory" width="300" /></a
+    <a href="/projects/obrazova_mapa_2/img/hory.jpg"
+      ><img
+        src="/projects/obrazova_mapa_2/img/hory.jpg"
+        alt="hory.jpg"
+        title="hory"
+        width="300" /></a
     ><br />
     <a href="/obrazova_mapa_2"
-      ><img src="img/cr_mapa.png" alt="cr_mapa.png" height="50" align="right"
+      ><img
+        src="/projects/obrazova_mapa_2/img/cr_mapa.png"
+        alt="cr_mapa.png"
+        height="50"
+        align="right"
     /></a>
   </body>
 </html>
