--- a/public/projects/obrazova_mapa_2/index.html
+++ b/public/projects/obrazova_mapa_2/index.html
@@ -35,24 +35,41 @@
     </p>
     <hr size="3px" color="#f00" />
     <a href="praha"
-      ><img src="img/praha.jpg" alt="praha.jpg" title="praha" height="100"
+      ><img
+        src="/projects/obrazova_mapa_2/img/praha.jpg"
+        alt="praha.jpg"
+        title="praha"
+        height="100"
     /></a>
     <a href="reky"
-      ><img src="img/reka.jpg" alt="reka.jpg" title="řeka" height="100"
+      ><img
+        src="/projects/obrazova_mapa_2/img/reka.jpg"
+        alt="reka.jpg"
+        title="řeka"
+        height="100"
     /></a>
     <a href="hory"
-      ><img src="img/hory.jpg" alt="hory.jpg" title="hory" height="100"
+      ><img
+        src="/projects/obrazova_mapa_2/img/hory.jpg"
+        alt="hory.jpg"
+        title="hory"
+        height="100"
     /></a>
     <a href="flora_a_fauna"
       ><img
-        src="img/fauna_flora.jpg"
+        src="/projects/obrazova_mapa_2/img/fauna_flora.jpg"
         alt="fauna_flora.jpg"
         title="fauna a flora"
         height="100"
     /></a>
     <hr size="3px" color="#f00" />
     <p align="center">
-      <img src="img/mapa.jpg" alt="mapa.jpg" align="center" usemap="#mapa" />
+      <img
+        src="/projects/obrazova_mapa_2/img/mapa.jpg"
+        alt="mapa.jpg"
+        align="center"
+        usemap="#mapa"
+      />
     </p>
     <map name="mapa">
       <area
