--- a/public/projects/obrazova_mapa_2/reky.html
+++ b/public/projects/obrazova_mapa_2/reky.html
@@ -31,11 +31,19 @@
       (167 km), Lužnice (157 km), Berounka (139 km) a Otava (111 km). Největším
       přírodním jezerem Česka je Černé jezero na Šumavě.
     </p>
-    <a href="img/reka.jpg"
-      ><img src="img/reka.jpg" alt="reka.jpg" title="reka" width="300" /></a
+    <a href="/projects/obrazova_mapa_2/img/reka.jpg"
+      ><img
+        src="/projects/obrazova_mapa_2/img/reka.jpg"
+        alt="reka.jpg"
+        title="reka"
+        width="300" /></a
     ><br />
     <a href="/obrazova_mapa_2"
-      ><img src="img/cr_mapa.png" alt="cr_mapa.png" height="50" align="right"
+      ><img
+        src="/projects/obrazova_mapa_2/img/cr_mapa.png"
+        alt="cr_mapa.png"
+        height="50"
+        align="right"
     /></a>
   </body>
 </html>
