--- a/public/projects/pracovni_list/index.html
+++ b/public/projects/pracovni_list/index.html
@@ -28,7 +28,7 @@
       <section>
         <h2>Příklad č. 1</h2>
         <p>Diagram příkladu č. 2</p>
-        <img src="diagram.svg" alt="diagram.svg" />
+        <img src="/projects/pracovni_list/diagram.svg" alt="diagram.svg" />
       </section>
       <section>
         <h2>Příklad č. 2</h2>
