--- a/public/projects/seznam_ukolu/index.html
+++ b/public/projects/seznam_ukolu/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Seznam úkolů</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/projects/seznam_ukolu/css/style.css" />
     <link rel="stylesheet" href="../../css/home.css" />
     <link
       href="../../favicon/favicon.ico"
@@ -26,6 +26,6 @@
       </div>
     </div>
     <ul id="myUL"></ul>
-    <script src="js/script.js"></script>
+    <script src="/projects/seznam_ukolu/js/script.js"></script>
   </body>
 </html>
