--- a/public/projects/todo/index.html
+++ b/public/projects/todo/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/projects/todo/css/style.css" />
     <title>To do list</title>
     <link rel="stylesheet" href="../../css/home.css" />
     <link
@@ -19,6 +19,6 @@
       <span onclick="newElement()" class="addBtn">Add</span>
     </div>
     <ul id="myUL"></ul>
-    <script src="js/script.js"></script>
+    <script src="/projects/todo/js/script.js"></script>
   </body>
 </html>
