--- a/public/projects/zoo/slon.html
+++ b/public/projects/zoo/slon.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Dominik Kostka" />
     <meta name="robots" content="all" />
     <!-- <meta http-equiv='X-UA-Compatible' content='IE=edge'> -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/projects/zoo/style.css" />
     <link rel="stylesheet" href="../../css/home.css" />
     <link
       href="../../favicon/favicon.ico"
@@ -23,7 +23,7 @@
   <body style="background-color: rgb(44, 202, 39)">
     <a href="/"><i class="fas fa-home"></i></a>
     <p align="center">
-      <img src="images/slon.jpg" width="800px" />
+      <img src="/projects/zoo/images/slon.jpg" width="800px" />
     </p>
     <p align="right"><a href="/zoo">ZPĚT</a></p>
   </body>
