--- a/public/projects/zvirata/index.html
+++ b/public/projects/zvirata/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Dominik Kostka" />
     <meta name="robots" content="all" />
     <!-- <meta http-equiv='X-UA-Compatible' content='IE=edge'> -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/projects/zvirata/css/style.css" />
     <link rel="stylesheet" href="../../css/home.css" />
     <link
       href="../../favicon/favicon.ico"
@@ -59,8 +59,16 @@
         Quisque sed pellentesque lorem, quis ultrices nulla. Praesent vitae leo
         augue.
       </p>
-      <img src="img/kocour_maly.jpg" title="Kočka" alt="kocour_maly.jpg" />
-      <img src="img/pes_maly.jpg" title="Pes" alt="pes_maly.jpg" />
+      <img
+        src="/projects/zvirata/img/kocour_maly.jpg"
+        title="Kočka"
+        alt="kocour_maly.jpg"
+      />
+      <img
+        src="/projects/zvirata/img/pes_maly.jpg"
+        title="Pes"
+        alt="pes_maly.jpg"
+      />
     </section>
     <footer>
       <p>ZÁPATÍ PES A KOČKA</p>
