--- a/public/projects/zvirata/pes.html
+++ b/public/projects/zvirata/pes.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Dominik Kostka" />
     <meta name="robots" content="all" />
     <!-- <meta http-equiv='X-UA-Compatible' content='IE=edge'> -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/projects/zvirata/css/style.css" />
     <link rel="stylesheet" href="../../css/home.css" />
     <link
       href="../../favicon/favicon.ico"
@@ -49,8 +49,11 @@
         <li>zrak</li>
         <li>sluch</li>
       </ul>
-      <a href="img/pes_velky.jpg"
-        ><img src="img/pes_maly.jpg" title="Pes" alt="pes_maly.jpg"
+      <a href="/projects/zvirata/img/pes_velky.jpg"
+        ><img
+          src="/projects/zvirata/img/pes_maly.jpg"
+          title="Pes"
+          alt="pes_maly.jpg"
       /></a>
     </section>
     <footer>
