--- a/public/projects/dvousloupcovy_layout/index.html
+++ b/public/projects/dvousloupcovy_layout/index.html
@@ -13,7 +13,11 @@
       rel="shortcut icon"
       type="image/png"
     />
-    <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <link
+      rel="stylesheet"
+      href="/projects/dvousloupcovy_layout/css/style.css"
+      type="text/css"
+    />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
