--- a/public/projects/objekt_kruh/index.html
+++ b/public/projects/objekt_kruh/index.html
@@ -10,7 +10,11 @@
       rel="shortcut icon"
       type="image/png"
     />
-    <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <link
+      rel="stylesheet"
+      href="/projects/obejkt_kruh/css/style.css"
+      type="text/css"
+    />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
@@ -44,6 +48,6 @@
 console.log(check_a_point(0, 0, 2, 4, 6));
 console.log(check_a_point(0, 0, 6, 8, 6));</code></pre>
     </main>
-    <script src="js/script.js"></script>
+    <script src="/projects/obejkt_kruh/js/script.js"></script>
   </body>
 </html>
