--- a/public/projects/zoo/index.html
+++ b/public/projects/zoo/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Dominik Kostka" />
     <meta name="robots" content="all" />
     <!-- <meta http-equiv='X-UA-Compatible' content='IE=edge'> -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/projects/zoo/style.css" />
     <link rel="stylesheet" href="../../css/home.css" />
     <link
       href="../../favicon/favicon.ico"
