ceske projekty zmena cesty

--- a/public/projekty/cesta_dolu/index.html
+++ b/public/projekty/cesta_dolu/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cesta dolů</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/projekty/cesta_dolu/css/style.css" />
     <link rel="stylesheet" href="../../css/home.css" />
     <link
       href="../../favicon/favicon.ico"
@@ -37,6 +37,6 @@
       <div id="character">4</div>
     </div>
   </body>
-  <script src="js/controls.js"></script>
-  <script src="js/cdscript.js"></script>
+  <script src="/projekty/cesta_dolu/js/controls.js"></script>
+  <script src="/projekty/cesta_dolu/js/cdscript.js"></script>
 </html>
