--- a/public/projekty/ciferny_soucet/index.html
+++ b/public/projekty/ciferny_soucet/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ciferný součet</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/projekty/ciferny_soucet/css/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
@@ -67,6 +67,6 @@ console.log(changeValueFor(85));</code></pre>
       />
       <p id="p_for">Výsledek:</p>
     </main>
-    <script src="js/script.js"></script>
+    <script src="/projekty/ciferny_soucet/js/script.js"></script>
   </body>
 </html>
