--- a/public/projekty/had/index.html
+++ b/public/projekty/had/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Had</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/projekty/had/css/style.css" />
     <link rel="stylesheet" href="../../css/home.css" />
     <link
       href="../../favicon/favicon.ico"
@@ -26,6 +26,6 @@
     <canvas width="500" height="500"></canvas>
     <h1>0</h1>
     <h2></h2>
-    <script src="js/script.js"></script>
+    <script src="/projekty/had/js/script.js"></script>
   </body>
 </html>
