--- a/public/projekty/hardware/monitor.html
+++ b/public/projekty/hardware/monitor.html
@@ -9,7 +9,7 @@
     <meta name="robots" content="all" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- <meta http-equiv='X-UA-Compatible' content='IE=edge'> -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/projekty/hardware/css/style.css" />
     <link rel="stylesheet" href="../../css/home.css" />
     <link
       href="../../favicon/favicon.ico"
@@ -55,8 +55,8 @@
         <li>plazmová obrazovka – dříve progresivní technologie</li>
         <li>další, méně obvyklé typy (OLED, LED TV, atd.)</li>
       </ul>
-      <a href="img/monitor.jpg"
-        ><img src="img/monitor.jpg" alt="monitor.jpg"
+      <a href="/projekty/hardware/img/monitor.jpg"
+        ><img src="/projekty/hardware/img/monitor.jpg" alt="monitor.jpg"
       /></a>
     </main>
     <footer><p>Autor: Dominik Kostka</p></footer>
