--- a/public/projekty/kamen_nuzky_papir_tapir_spock/index.html
+++ b/public/projekty/kamen_nuzky_papir_tapir_spock/index.html
@@ -10,7 +10,10 @@
     />
     <meta name="author" content="Dominik Kostka" />
     <meta name="robots" content="all" />
-    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="/projekty/kamen_nuzky_papir_tapir_spock/style.css"
+    />
     <link rel="stylesheet" href="../../css/home.css" />
     <link
       href="../../favicon/favicon.ico"
@@ -27,8 +30,20 @@
     <h1>Kámen, nůžky, papír, tapír, spock</h1>
     <table class="center">
       <tr>
-        <td><img id="img1" src="0.png" alt="" /></td>
-        <td><img id="img2" src="1.png" alt="" /></td>
+        <td>
+          <img
+            id="img1"
+            src="/projekty/kamen_nuzky_papir_tapir_spock/0.png"
+            alt=""
+          />
+        </td>
+        <td>
+          <img
+            id="img2"
+            src="/projekty/kamen_nuzky_papir_tapir_spock/1.png"
+            alt=""
+          />
+        </td>
       </tr>
       <tr>
         <td id="hr1">Hráč 1</td>
@@ -37,7 +52,7 @@
       <tr>
         <td colspan="2"><button onclick="hra()">HRAJ</button></td>
       </tr>
-      <script src="script.js"></script>
+      <script src="/projekty/kamen_nuzky_papir_tapir_spock/script.js"></script>
     </table>
   </body>
 </html>
