--- a/public/projekty/kurzovni_listek/index.html
+++ b/public/projekty/kurzovni_listek/index.html
@@ -10,7 +10,7 @@
       type="image/png"
     />
     <title>Kurzovní lístek</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/projekty/kurzovni_listek/css/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
@@ -29,6 +29,6 @@
       </button>
       <ul class="add-currency-list"></ul>
     </div>
-    <script src="js/script.js"></script>
+    <script src="/projekty/kurzovni_listek/js/script.js"></script>
   </body>
 </html>
