--- a/public/projekty/obrazova_mapa/index.html
+++ b/public/projekty/obrazova_mapa/index.html
@@ -45,20 +45,36 @@
     </ul>
     <hr size="3px" color="#f00" />
     <a href="hroch"
-      ><img src="img/hroch_m.jpg" alt="hroch_m.jpg" title="hroch" height="50"
+      ><img
+        src="/projekty/obrazova_mapa/img/hroch_m.jpg"
+        alt="hroch_m.jpg"
+        title="hroch"
+        height="50"
     /></a>
     <a href="tygr"
-      ><img src="img/tygr_m.jpg" alt="tygr_m.jpg" title="tygr" height="50"
+      ><img
+        src="/projekty/obrazova_mapa/img/tygr_m.jpg"
+        alt="tygr_m.jpg"
+        title="tygr"
+        height="50"
     /></a>
     <a href="lev"
-      ><img src="img/lev_m.jpg" alt="lev_m.jpg" title="lev" height="50"
+      ><img
+        src="/projekty/obrazova_mapa/img/lev_m.jpg"
+        alt="lev_m.jpg"
+        title="lev"
+        height="50"
     /></a>
     <a href="slon"
-      ><img src="img/slon_m.jpg" alt="slon_m.jpg" title="slon" height="50"
+      ><img
+        src="/projekty/obrazova_mapa/img/slon_m.jpg"
+        alt="slon_m.jpg"
+        title="slon"
+        height="50"
     /></a>
     <hr size="3px" color="#f00" />
     <img
-      src="img/ctverice.jpg"
+      src="/projekty/obrazova_mapa/img/ctverice.jpg"
       alt="ctverice.jpg"
       title="ctverice"
       usemap="#zvirata"
