--- a/public/projekty/obrazova_mapa/lev.html
+++ b/public/projekty/obrazova_mapa/lev.html
@@ -22,7 +22,9 @@
   <body>
     <a href="/"><i class="fas fa-home"></i></a>
     <h1 align="center">Lev</h1>
-    <a href="img/lev_ok.JPG"><img src="img/lev_m.jpg" alt="lev_m.jpg" /></a>
+    <a href="/projekty/cesta_dolu/img/lev_ok.JPG"
+      ><img src="/projekty/cesta_dolu/img/lev_m.jpg" alt="lev_m.jpg"
+    /></a>
     <p align="justify">
       Lev pustinný je savec čeledi kočkovitých (Felidae) a jedním ze čtyř druhů
       velkých koček rodu Panthera. Lev je po tygrovi druhou největší kočkovitou
