--- a/public/projekty/obrazova_mapa/slon.html
+++ b/public/projekty/obrazova_mapa/slon.html
@@ -22,7 +22,9 @@
   <body>
     <a href="/"><i class="fas fa-home"></i></a>
     <h1 align="center">Slon</h1>
-    <a href="img/slon_ok.jpg"><img src="img/slon_m.jpg" alt="slon_m.jpg" /></a>
+    <a href="/projekty/obrazova_mapa/img/slon_ok.jpg"
+      ><img src="/projekty/obrazova_mapa/img/slon_m.jpg" alt="slon_m.jpg"
+    /></a>
     <p align="justify">
       Slon je největší žijící suchozemský savec. Při narození váží okolo 100 kg.
       Samice slona je březí 20 až 22 měsíců, což je nejdelší doba březosti u
