--- a/public/projekty/obrazova_mapa_2/flora_a_fauna.html
+++ b/public/projekty/obrazova_mapa_2/flora_a_fauna.html
@@ -39,15 +39,19 @@
       i vlci a medvěd hnědý, byť vzácně. Celkový počet druhů živočichů v Česku
       je odhadován na 40 000, z toho nejméně 28 124 druhů je bezobratlých.
     </p>
-    <a href="img/fauna_flora.jpg"
+    <a href="/projekty/obrazova_mapa_2/img/fauna_flora.jpg"
       ><img
-        src="img/fauna_flora.jpg"
+        src="/projekty/obrazova_mapa_2/img/fauna_flora.jpg"
         alt="fauna_flora.jpg"
         title="fauna_flora"
         width="300" /></a
     ><br />
     <a href="/obrazova_mapa_2"
-      ><img src="img/cr_mapa.png" alt="cr_mapa.png" height="50" align="right"
+      ><img
+        src="/projekty/obrazova_mapa_2/img/cr_mapa.png"
+        alt="cr_mapa.png"
+        height="50"
+        align="right"
     /></a>
   </body>
 </html>
