--- a/public/projekty/obrazova_mapa_2/praha.html
+++ b/public/projekty/obrazova_mapa_2/praha.html
@@ -35,11 +35,19 @@
       všech církví, náboženských a dalších sdružení s celorepublikovou
       působností registrovaných v ČR.
     </p>
-    <a href="img/praha.jpg"
-      ><img src="img/praha.jpg" alt="praha.jpg" title="praha" width="300" /></a
+    <a href="/projekty/obrazova_mapa_2/img/praha.jpg"
+      ><img
+        src="/projekty/obrazova_mapa_2/img/praha.jpg"
+        alt="praha.jpg"
+        title="praha"
+        width="300" /></a
     ><br />
     <a href="/obrazova_mapa_2"
-      ><img src="img/cr_mapa.png" alt="cr_mapa.png" height="50" align="right"
+      ><img
+        src="/projekty/obrazova_mapa_2/img/cr_mapa.png"
+        alt="cr_mapa.png"
+        height="50"
+        align="right"
     /></a>
   </body>
 </html>
