--- a/public/projekty/opakovani/index.html
+++ b/public/projekty/opakovani/index.html
@@ -43,13 +43,13 @@
     </p>
     <a href="fotbal">
       <img
-        src="images/fotbal.jpg"
+        src="/projekty/opakovani/images/fotbal.jpg"
         width="400"
         title="Tenhle obrázek tě přesune na stránku fotbal"
       /> </a
     ><a href="hokej">
       <img
-        src="images/hokej.jpg"
+        src="/projekty/opakovani/images/hokej.jpg"
         width="400"
         align="right"
         title="Tenhle obrázek tě přesune na stránku hokej"
