--- a/public/projekty/opakovani/hokej.html
+++ b/public/projekty/opakovani/hokej.html
@@ -44,13 +44,13 @@
     </p>
     <a href="/opakovani">
       <img
-        src="images/back.png"
+        src="/projekty/opakovani/images/back.png"
         width="245"
         title="Tenhle obrázek tě přesune na stránku sporty"
       /> </a
     ><a href="fotbal">
       <img
-        src="images/fotbal.jpg"
+        src="/projekty/opakovani/images/fotbal.jpg"
         width="400"
         align="right"
         title="Tenhle obrázek tě přesune na stránku fotbal"
