--- a/public/projekty/tabulka/index.html
+++ b/public/projekty/tabulka/index.html
@@ -72,6 +72,6 @@
         <td>brouzdalova@nase-spolecnost.cz</td>
       </tr>
     </table>
-    <script src="js/script.js"></script>
+    <script src="/projekty/tabulka/js/script.js"></script>
   </body>
 </html>
