--- a/public/projekty/zvirata/kocka.html
+++ b/public/projekty/zvirata/kocka.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Dominik" />
     <meta name="robots" content="all" />
     <!-- <meta http-equiv='X-UA-Compatible' content='IE=edge'> -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/projekty/zvirata/css/style.css" />
     <link rel="stylesheet" href="../../css/home.css" />
     <link
       href="../../favicon/favicon.ico"
@@ -47,8 +47,11 @@
         <li>zrak</li>
         <li>sluch</li>
       </ul>
-      <a href="img/kocour_velky.jpg"
-        ><img src="img/kocour_maly.jpg" title="Kočka" alt="kocour_maly.jpg"
+      <a href="/projekty/zvirta/img/kocour_velky.jpg"
+        ><img
+          src="/projekty/zvirata/img/kocour_maly.jpg"
+          title="Kočka"
+          alt="kocour_maly.jpg"
       /></a>
     </section>
     <footer>
