--- a/public/projekty/dvousloupcovy_layout/treti.html
+++ b/public/projekty/dvousloupcovy_layout/treti.html
@@ -29,16 +29,16 @@
     <header>ZÁHLAVÍ</header>
     <main>
       <nav>
-        <a href="/dvousloupcovy_layout"
+        <a href="/projekty/dvousloupcovy_layout/"
           ><p><i class="fas fa-home first"></i> DOMŮ</p></a
         >
-        <a href="druha"
+        <a href="/projekty/dvousloupcovy_layout/druha"
           ><p><i class="fas fa-user"></i> 2.STRANA</p></a
         >
-        <a href="treti"
+        <a href="/projekty/dvousloupcovy_layout/treti"
           ><p class="act"><i class="fas fa-dog"></i> 3.STRANA</p></a
         >
-        <a href="http://cheesefield.4fan.cz"
+        <a href="/"
           ><p><i class="fas fa-sign"></i> ROZCESTÍ</p></a
         >
       </nav>
