--- a/public/projekty/dvousloupcovy_layout/druha.html
+++ b/public/projekty/dvousloupcovy_layout/druha.html
@@ -32,10 +32,10 @@
         <a href="/projekty/dvousloupcovy_layout/"
           ><p><i class="fas fa-home first"></i> DOMŮ</p></a
         >
-        <a href="/projekty/dvousloupcovy_layout/druha"
+        <a href="/projekty/dvousloupcovy_layout/druha.html"
           ><p class="act"><i class="fas fa-user"></i> 2.STRANA</p></a
         >
-        <a href="/projekty/dvousloupcovy_layout/treti"
+        <a href="/projekty/dvousloupcovy_layout/treti.html"
           ><p><i class="fas fa-dog"></i> 3.STRANA</p></a
         >
         <a href="/"
