--- a/public/projekty/hardware/index.html
+++ b/public/projekty/hardware/index.html
@@ -26,8 +26,8 @@
       <a href="/"><i class="fas fa-home" id="white"></i></a>
       <ul>
         <li class="active"><a href="">Domů</a></li>
-        <li><a href="monitor">Monitor</a></li>
-        <li><a href="klavesnice">Klávesnice</a></li>
+        <li><a href="/projekty/hardware/monitor.html">Monitor</a></li>
+        <li><a href="/projekty/hardware/klavesnice.html">Klávesnice</a></li>
       </ul>
     </nav>
     <main id="hardware">
