--- a/public/projekty/hardware/klavesnice.html
+++ b/public/projekty/hardware/klavesnice.html
@@ -25,8 +25,8 @@
     <nav>
       <a href="/"><i class="fas fa-home" id="white"></i></a>
       <ul>
-        <li><a href="/hardware">Domů</a></li>
-        <li><a href="monitor">Monitor</a></li>
+        <li><a href="/projekty/hardware/">Domů</a></li>
+        <li><a href="/projekty/hardware/monitor.html">Monitor</a></li>
         <li class="active"><a href="">Klávesnice</a></li>
       </ul>
     </nav>
