--- a/public/projekty/obrazova_mapa/hroch.html
+++ b/public/projekty/obrazova_mapa/hroch.html
@@ -44,10 +44,10 @@
       diamantů.
     </p>
     <ul>
-      <li><a href="slon">SLON</a></li>
-      <li><a href="tygr">TYGR</a></li>
-      <li><a href="lev">LEV</a></li>
-      <li><a href="/obrazova_mapa">ÚVOD</a></li>
+      <li><a href="/projekty/obrazova_mapa/slon.html">SLON</a></li>
+      <li><a href="/projekty/obrazova_mapa/tygr.html">TYGR</a></li>
+      <li><a href="/projekty/obrazova_mapa/lev.html">LEV</a></li>
+      <li><a href="/projekty/obrazova_mapa">ÚVOD</a></li>
     </ul>
   </body>
 </html>
