--- a/public/projekty/obrazova_mapa/tygr.html
+++ b/public/projekty/obrazova_mapa/tygr.html
@@ -39,10 +39,10 @@
       Koreje jich ještě žije asi 20 kusů.
     </p>
     <ul>
-      <li><a href="slon">SLON</a></li>
-      <li><a href="hroch">HROCH</a></li>
-      <li><a href="lev">LEV</a></li>
-      <li><a href="/obrazova_mapa">ÚVOD</a></li>
+      <li><a href="/projekty/obrazova_mapa/slon.html">SLON</a></li>
+      <li><a href="/projekty/obrazova_mapa/hroch.html">HROCH</a></li>
+      <li><a href="/projekty/obrazova_mapa/lev.html">LEV</a></li>
+      <li><a href="/projekty/obrazova_mapa">ÚVOD</a></li>
     </ul>
   </body>
 </html>
