--- a/public/projekty/opakovani/fotbal.html
+++ b/public/projekty/opakovani/fotbal.html
@@ -42,13 +42,13 @@
       brankář (tzn. jeden z hráčů, odlišený barvou dresu) může v blízkosti
       vlastní branky hrát i rukama.
     </p>
-    <a href="/opakovani">
+    <a href="/projekty/opakovani">
       <img
         src="/projekty/opakovani/images/back.png"
         width="245"
         title="Tenhle obrázek tě přesune na stránku sporty"
       /> </a
-    ><a href="hokej">
+    ><a href="/projekty/opakovani/hokej.html">
       <img
         src="/projekty/opakovani/images/hokej.jpg"
         width="400"
