--- a/public/projekty/opakovani/hokej.html
+++ b/public/projekty/opakovani/hokej.html
@@ -42,13 +42,13 @@
       dvěma týmy se uskutečnilo 3. března 1875 v Montreálu na Victoria Skating
       Rink.
     </p>
-    <a href="/opakovani">
+    <a href="/projekty/opakovani">
       <img
         src="/projekty/opakovani/images/back.png"
         width="245"
         title="Tenhle obrázek tě přesune na stránku sporty"
       /> </a
-    ><a href="fotbal">
+    ><a href="/projekty/opakovani/fotbal.html">
       <img
         src="/projekty/opakovani/images/fotbal.jpg"
         width="400"
