--- a/public/projekty/zvirata/pes.html
+++ b/public/projekty/zvirata/pes.html
@@ -23,9 +23,9 @@
   <body>
     <nav>
       <ul>
-        <li><a href="/zvirata">Domů</a></li>
-        <li><a href="kocka">Kočka</a></li>
-        <li class="active"><a href="pes">Pes</a></li>
+        <li><a href="/projekty/zvirata">Domů</a></li>
+        <li><a href="/projekty/zvirata/kocka.html">Kočka</a></li>
+        <li class="active"><a href="/projekty/zvirata/pes.html">Pes</a></li>
       </ul>
     </nav>
     <header>
