--- a/public/projekty/obrazova_mapa/lev.html
+++ b/public/projekty/obrazova_mapa/lev.html
@@ -42,10 +42,10 @@
       usmrtila jiná zvířata jako hyeny a jiné psovité šelmy.
     </p>
     <ul>
-      <li><a href="slon">SLON</a></li>
-      <li><a href="tygr">TYGR</a></li>
-      <li><a href="hroch">HROCH</a></li>
-      <li><a href="/obrazova_mapa">ÚVOD</a></li>
+      <li><a href="/projekty/obrazova_mapa/slon.html">SLON</a></li>
+      <li><a href="/projekty/obrazova_mapa/tygr.html">TYGR</a></li>
+      <li><a href="/projekty/obrazova_mapa/hroch.html">HROCH</a></li>
+      <li><a href="/projekty/obrazova_mapa">ÚVOD</a></li>
     </ul>
   </body>
 </html>
