--- a/public/projekty/obrazova_mapa_2/reky.html
+++ b/public/projekty/obrazova_mapa_2/reky.html
@@ -38,7 +38,7 @@
         title="reka"
         width="300" /></a
     ><br />
-    <a href="/obrazova_mapa_2"
+    <a href="/projekty/obrazova_mapa_2"
       ><img
         src="/projekty/obrazova_mapa_2/img/cr_mapa.png"
         alt="cr_mapa.png"
