--- a/public/projekty/zoo/slon.html
+++ b/public/projekty/zoo/slon.html
@@ -25,6 +25,6 @@
     <p align="center">
       <img src="/projekty/zoo/images/slon.jpg" width="800px" />
     </p>
-    <p align="right"><a href="/zoo">ZPĚT</a></p>
+    <p align="right"><a href="/projekty/zoo">ZPĚT</a></p>
   </body>
 </html>
