--- a/public/index.html
+++ b/public/index.html
@@ -10,49 +10,40 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="%PUBLIC_URL%/favicon/apple-icon-180x180.png"
+      href="/favicon/apple-icon-180x180.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="%PUBLIC_URL%/favicon/favicon-32x32.png"
+      href="/favicon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="%PUBLIC_URL%/favicon/favicon-16x16.png"
+      href="/favicon/favicon-16x16.png"
     />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon/favicon.ico" />
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="theme-color" content="#FFBD05" />
     <meta name="msapplication-navbutton-color" content="#FFBD05" />
     <meta name="apple-mobile-web-app-status-bar-style" content="#FFBD05" />
     <title>CheeseField</title>
-    <meta
-      name="description"
-      content="Jmenuji se Dominik, vytvářím webové stránky v HTML a CSS, občas udělám i hru v Javascriptu."
-    />
-    <meta property="og:url" content="http://www.cheesefield.4fan.cz/" />
-    <meta property="og:title" content="Domů • CheeseField" />
-    <meta
-      property="og:description"
-      content="Jmenuji se Dominik, vytvářím webové stránky v HTML a CSS, občas udělám i hru v Javascriptu."
-    />
-    <meta property="og:image" content="images/share.png" />
-    <meta name="og:locale" content="cs_CZ" />
-    <meta name="og:type" content="website" />
     <meta name="og:site_name" content="CheeseField" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="CheeseField" />
-    <meta name="twitter:title" content="Domů • CheeseField" />
-    <meta
-      name="twitter:description"
-      content="Jmenuji se Dominik, vytvářím webové stránky v HTML a CSS, občas udělám i hru v Javascriptu."
-    />
-    <meta name="twitter:image" content="images/share.png" />
+    <meta name="description" content="" data-react-helmet="true" />
+    <meta property="og:url" content="" data-react-helmet="true" />
+    <meta property="og:title" content="" data-react-helmet="true" />
+    <meta property="og:description" content="" data-react-helmet="true" />
+    <meta property="og:image" content="" data-react-helmet="true" />
+    <meta name="og:locale" content="cs_CZ" />
+    <meta name="og:type" content="website" />
+    <meta name="twitter:title" content="" data-react-helmet="true" />
+    <meta name="twitter:description" content="" data-react-helmet="true" />
+    <meta name="twitter:image" content="" data-react-helmet="true" />
     <link rel="canonical" href="/" />
     <meta name="robots" content="index, follow" />
   </head>
