--- a/public/projects/hardware/monitor.html
+++ b/public/projects/hardware/monitor.html
@@ -25,9 +25,9 @@
     <nav>
       <a href="/"><i class="fas fa-home" id="hardware-home"></i></a>
       <ul>
-        <li><a href="/hardware">Domů</a></li>
+        <li><a href="/projects/hardware">Domů</a></li>
         <li class="active"><a href="">Monitor</a></li>
-        <li><a href="klavesnice">Klávesnice</a></li>
+        <li><a href="/projects/hardware/klavesnice.html">Klávesnice</a></li>
       </ul>
     </nav>
     <main id="monitor">
