--- a/public/projects/obrazova_mapa/index.html
+++ b/public/projects/obrazova_mapa/index.html
@@ -38,13 +38,13 @@
     </p>
     <h2>ODKAZY</h2>
     <ul>
-      <li><a href="lev">LEV</a></li>
-      <li><a href="tygr">TYGR</a></li>
-      <li><a href="slon">SLON</a></li>
-      <li><a href="hroch">HROCH</a></li>
+      <li><a href="/projects/obrazova_mapa/lev.html">LEV</a></li>
+      <li><a href="/projects/obrazova_mapa/tygr.html">TYGR</a></li>
+      <li><a href="/projects/obrazova_mapa/slon.html">SLON</a></li>
+      <li><a href="/projects/obrazova_mapa/hroch.html">HROCH</a></li>
     </ul>
     <hr size="3px" color="#f00" />
-    <a href="hroch"
+    <a href="/projects/obrazova_mapa/hroch.html"
       ><img
         src="/projects/obrazova_mapa/img/hroch_m.jpg"
         alt="hroch_m.jpg"
@@ -89,25 +89,25 @@
       <area
         shape="rectangle"
         coords="0,0,194,150"
-        href="slon"
+        href="/projects/obrazova_mapa/slon.html"
         title="jdi na slona"
       />
       <area
         shape="rectangle"
         coords="194,0,388,150"
-        href="tygr"
+        href="/projects/obrazova_mapa/tygr.html"
         title="jdi na tygra"
       />
       <area
         shape="rectangle"
         coords="0,150,194,300"
-        href="lev"
+        href="/projects/obrazova_mapa/lev.html"
         title="jdi na lva"
       />
       <area
         shape="rectangle"
         coords="194,150,388,300"
-        href="hroch"
+        href="/projects/obrazova_mapa/hroch.html"
         title="jdi na hrocha"
       />
     </map>
