--- a/public/projects/obrazova_mapa_2/index.html
+++ b/public/projects/obrazova_mapa_2/index.html
@@ -34,28 +34,28 @@
       vláda České republiky.
     </p>
     <hr size="3px" color="#f00" />
-    <a href="praha"
+    <a href="/projects/obrazova_mapa_2/praha.html"
       ><img
         src="/projects/obrazova_mapa_2/img/praha.jpg"
         alt="praha.jpg"
         title="praha"
         height="100"
     /></a>
-    <a href="reky"
+    <a href="/projects/obrazova_mapa_2/reky.html"
       ><img
         src="/projects/obrazova_mapa_2/img/reka.jpg"
         alt="reka.jpg"
         title="řeka"
         height="100"
     /></a>
-    <a href="hory"
+    <a href="/projects/obrazova_mapa_2/hory.html"
       ><img
         src="/projects/obrazova_mapa_2/img/hory.jpg"
         alt="hory.jpg"
         title="hory"
         height="100"
     /></a>
-    <a href="flora_a_fauna"
+    <a href="/projects/obrazova_mapa_2/flora_a_fauna.html"
       ><img
         src="/projects/obrazova_mapa_2/img/fauna_flora.jpg"
         alt="fauna_flora.jpg"
@@ -81,25 +81,25 @@
       <area
         shape="rectangle"
         coords="0,0,300,199"
-        href="reky"
+        href="/projects/obrazova_mapa_2/reky.html"
         title="jdi na reky"
       />
       <area
         shape="rectangle"
         coords="300,0,600,199"
-        href="flora_a_fauna"
+        href="/projects/obrazova_mapa_2/flora_a_fauna.html"
         title="jdi na floru a faunu"
       />
       <area
         shape="rectangle"
         coords="0,199,300,398"
-        href="praha"
+        href="/projects/obrazova_mapa_2/praha.html"
         title="jdi na prahu"
       />
       <area
         shape="rectangle"
         coords="300,199,600,398"
-        href="hory"
+        href="/projects/obrazova_mapa_2/hory.html"
         title="jdi na hory"
       />
     </map>
