--- a/public/projects/obrazova_mapa_2/praha.html
+++ b/public/projects/obrazova_mapa_2/praha.html
@@ -42,7 +42,7 @@
         title="praha"
         width="300" /></a
     ><br />
-    <a href="/obrazova_mapa_2"
+    <a href="/projects/obrazova_mapa_2"
       ><img
         src="/projects/obrazova_mapa_2/img/cr_mapa.png"
         alt="cr_mapa.png"
