--- a/public/projects/opakovani/index.html
+++ b/public/projects/opakovani/index.html
@@ -41,13 +41,13 @@
       agresivní. Kdybych ho měl porovnat s fotbalem, tak je méně oblíbený právě
       hokej.
     </p>
-    <a href="fotbal">
+    <a href="/projects/opakovani/fotbal.html">
       <img
         src="/projects/opakovani/images/fotbal.jpg"
         width="400"
         title="Tenhle obrázek tě přesune na stránku fotbal"
       /> </a
-    ><a href="hokej">
+    ><a href="/projects/opakovani/hokej.html">
       <img
         src="/projects/opakovani/images/hokej.jpg"
         width="400"
