--- a/public/projects/zoo/index.html
+++ b/public/projects/zoo/index.html
@@ -25,14 +25,14 @@
     <h1 align="center">NAŠE ZOO</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
     <p>Integer at ullamcorper purus, sed molestie ipsum.</p>
-    <a href="tygr"><h2>Tygr</h2></a>
+    <a href="/projects/zoo/tygr.html"><h2>Tygr</h2></a>
     <ul>
       <li>usurijský</li>
       <li>indický</li>
       <li>sumaterský</li>
       <li>čínský</li>
     </ul>
-    <a href="slon"><h2>Slon</h2></a>
+    <a href="/projects/zoo/slon.html"><h2>Slon</h2></a>
     <ul>
       <li>africký</li>
       <li>indický</li>
