--- a/public/projects/zoo/slon.html
+++ b/public/projects/zoo/slon.html
@@ -25,6 +25,6 @@
     <p align="center">
       <img src="/projects/zoo/images/slon.jpg" width="800px" />
     </p>
-    <p align="right"><a href="/zoo">ZPĚT</a></p>
+    <p align="right"><a href="/projects/zoo">ZPĚT</a></p>
   </body>
 </html>
