--- a/public/projects/obrazova_mapa_2/flora_a_fauna.html
+++ b/public/projects/obrazova_mapa_2/flora_a_fauna.html
@@ -46,7 +46,7 @@
         title="fauna_flora"
         width="300" /></a
     ><br />
-    <a href="/obrazova_mapa_2"
+    <a href="/projects/obrazova_mapa_2"
       ><img
         src="/projects/obrazova_mapa_2/img/cr_mapa.png"
         alt="cr_mapa.png"
