--- a/public/projects/obrazova_mapa_2/hory.html
+++ b/public/projects/obrazova_mapa_2/hory.html
@@ -47,7 +47,7 @@
         title="hory"
         width="300" /></a
     ><br />
-    <a href="/obrazova_mapa_2"
+    <a href="/projects/obrazova_mapa_2"
       ><img
         src="/projects/obrazova_mapa_2/img/cr_mapa.png"
         alt="cr_mapa.png"
