--- a/public/projects/opakovani/fotbal.html
+++ b/public/projects/opakovani/fotbal.html
@@ -42,13 +42,13 @@
       brankář (tzn. jeden z hráčů, odlišený barvou dresu) může v blízkosti
       vlastní branky hrát i rukama.
     </p>
-    <a href="/opakovani">
+    <a href="/projects/opakovani">
       <img
         src="/projects/opakovani/images/back.png"
         width="245"
         title="Tenhle obrázek tě přesune na stránku sporty"
       /> </a
-    ><a href="hokej">
+    ><a href="/projects/opakovani/hokej.html">
       <img
         src="/projects/opakovani/images/hokej.jpg"
         width="400"
