--- a/public/projects/opakovani/hokej.html
+++ b/public/projects/opakovani/hokej.html
@@ -42,13 +42,13 @@
       dvěma týmy se uskutečnilo 3. března 1875 v Montreálu na Victoria Skating
       Rink.
     </p>
-    <a href="/opakovani">
+    <a href="/projects/opakovani">
       <img
         src="/projects/opakovani/images/back.png"
         width="245"
         title="Tenhle obrázek tě přesune na stránku sporty"
       /> </a
-    ><a href="fotbal">
+    ><a href="/projects/opakovani/fotbal.html">
       <img
         src="/projects/opakovani/images/fotbal.jpg"
         width="400"
