--- a/public/projects/zoo/tygr.html
+++ b/public/projects/zoo/tygr.html
@@ -25,6 +25,6 @@
     <p align="center">
       <img src="/projects/zoo/images/tygr.jpg" width="800" />
     </p>
-    <p align="right"><a href="/zoo">ZPĚT</a></p>
+    <p align="right"><a href="/projects/zoo">ZPĚT</a></p>
   </body>
 </html>
