--- a/public/projects/zvirata/pes.html
+++ b/public/projects/zvirata/pes.html
@@ -23,9 +23,9 @@
   <body>
     <nav>
       <ul>
-        <li><a href="/zvirata">Domů</a></li>
-        <li><a href="kocka">Kočka</a></li>
-        <li class="active"><a href="pes">Pes</a></li>
+        <li><a href="/projects/zvirata">Domů</a></li>
+        <li><a href="/projects/zvirata/kocka.html">Kočka</a></li>
+        <li class="active"><a href="/projects/zvirata/pes.html">Pes</a></li>
       </ul>
     </nav>
     <header>
