--- a/public/projekty/hardware/monitor.html
+++ b/public/projekty/hardware/monitor.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <nav>
-      <a href="/"><i class="fas fa-home" id="hardware-home"></i></a>
+      <a href="/"><i class="fas fa-home" id="white"></i></a>
       <ul>
         <li><a href="/projekty/hardware">Domů</a></li>
         <li class="active"><a href="">Monitor</a></li>
