--- a/public/projekty/opakovani/index.html
+++ b/public/projekty/opakovani/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="opakovani" />
     <meta name="author" content="Dominik Kostka" />
     <meta name="robots" content="all" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/projekty/opakovani/style.css" />
     <!-- <meta http-equiv='X-UA-Compatible' content='IE=edge'> -->
     <link rel="stylesheet" href="../../css/home.css" />
     <link
