--- a/public/projekty/seznam_ukolu/index.html
+++ b/public/projekty/seznam_ukolu/index.html
@@ -17,7 +17,7 @@
     />
   </head>
   <body>
-    <a href="/"><i class="fas fa-home"></i></a>
+    <a href="/"><i class="fas fa-home" id="white"></i></a>
     <div id="myDIV" class="header">
       <h2>Můj seznam úkolů</h2>
       <div>
