--- a/public/projects/recepty/index.html
+++ b/public/projects/recepty/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recepty</title>
-    <link rel="stylesheet" href="../recepty/css/style.css" />
+    <link rel="stylesheet" href="../../recepty/css/style.css" />
     <link rel="stylesheet" href="../../css/home.css" />
     <link
       href="../../favicon/favicon.ico"
@@ -20,7 +20,13 @@
     <a href="/"><i class="fas fa-home"></i></a>
     <h1>Recepty</h1>
     <div class="recepty">
-      <h3><a href="spagety_s_mletym_masem">Špagety s mletým masem</a></h3>
+      <h3>
+        <a href="../projekty/recepty/spagety_s_mletym_masem/"
+          >Špagety s mletým masem</a
+        >
+      </h3>
+      <h3><a href="#">PŘIPRAVUJE SE</a></h3>
+      <h3><a href="#">PŘIPRAVUJE SE</a></h3>
       <h3><a href="#">PŘIPRAVUJE SE</a></h3>
       <h3><a href="#">PŘIPRAVUJE SE</a></h3>
       <h3><a href="#">PŘIPRAVUJE SE</a></h3>
