--- a/public/projects/recepty/spagety_s_mletym_masem/index.html
+++ b/public/projects/recepty/spagety_s_mletym_masem/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Špagety s mletým masem</title>
-    <link rel="stylesheet" href="../css/recepty.css" />
+    <link rel="stylesheet" href="../../css/recepty.css" />
     <link rel="stylesheet" href="../../../css/home.css" />
     <link
       href="../../../favicon/favicon.ico"
